More tidying up of functions.